--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,4 +1,6 @@
-
-# Delete the above line if you want to manage this file yourself
+thin-manifests = true
+profile-formats = portage-2
+cache-formats = md5-dict
 masters = gentoo
 
+eapis-deprecated = 0 1 2 3 4
