Add several useflags for new desktop profile.
Move some use flags from default to desktop

--- a/profiles/gomersbach/base/env/O3.conf
+++ b/profiles/gomersbach/base/env/O3.conf
@@ -1,2 +1,2 @@
-CFLAGS="-march=x86-64 -O3 -msse -msse2 -msse3 -pipe -mcx16 -msahf -mpopcnt -fomit-frame-pointer"
+CFLAGS="${CFLAGS} -O3"
 CXXFLAGS="${CFLAGS}"
