Update copyright header with current year

--- a/media-sound/teamspeak-server-bin/files/teamspeak3-server.rc
+++ b/media-sound/teamspeak-server-bin/files/teamspeak3-server.rc
@@ -1,7 +1,7 @@
 #!/sbin/runscript
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak-server-bin/files/teamspeak3-server.rc,v 1.6 2012/12/21 19:24:29 hwoarang Exp $
+# $Header:
 
 depend() {
 	need net
