--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,11 +1,10 @@
 masters = gentoo
-eapis-banned = 0 1 2 3
 eapis-deprecated = 0 1 2 3 4
 sign-commits = true
 sign-manifests = false
 thin-manifests = true
 use-manifests = strict
 manifest-hashes = SHA256 SHA512 WHIRLPOOL
-update-changelog = false
+update-changelog = true
 cache-formats = md5-dict
 profile-formats = portage-2
