--- a/profiles/chinstrap/base/env/nativecflags.conf
+++ b/profiles/chinstrap/base/env/nativecflags.conf
@@ -1,4 +1,6 @@
-CFLAGS="-march=native -O2 -pipe -mtune=native"
+CFLAGS="-march=amdfam10 -mcpu=generic -mtune=generic -mmmx -msse -msse2 -msse3 -mcx16 -msahf -mpopcnt -mfxsr -pipe -O2 -frecord-gcc-switches -fstack-protector-strong"
 CXXFLAGS="${CFLAGS}"
 
-FEATURES="-distcc -distcc-pump"
+CPU_FLAGS_X86="3dnow 3dnowext aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
+
+FEATURES="-ccache -distcc -distcc-pump"
