Move to Travis CI make .travis/setup_repoman.sh executable execute .travis/setup_repoman.sh with sudo privileges limit clone depth of portage mirror to 1 move sudo to travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     - pip install lxml pyyaml
 before_script:
   - chmod a+rwx .travis/setup_repoman.sh
-  - sudo ./.travis/setup_repoman.sh
+  - ./.travis/setup_repoman.sh
 script:
-  - cd /var/db/repos/${OVERLAY_NAME}
+  - cd /var/db/repos/chinstrap-overlay
   - /tmp/portage/portage-${PORTAGE_VER}/repoman/bin/repoman --experimental-repository-modules=y -dx full
