Move to Travis CI make .travis/setup_repoman.sh executable execute .travis/setup_repoman.sh with sudo privileges limit clone depth of portage mirror to 1 move sudo to travis yaml Separate env vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: python
 python:
     - pypy
 env:
-    - PORTAGE_VER="2.3.51" OVERLAY_NAME="chinstrap-overlay"
+    - PORTAGE_VER="2.3.51"
+    - OVERLAY_NAME="chinstrap-overlay"
 before_install:
     - sudo apt-get -qq update
     - pip install lxml pyyaml
