--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: required
 language: python
 python:
-    - pypy
+  - pypy
 env:
-    - PORTAGE_VER="2.3.51"
-    - OVERLAY_NAME="chinstrap-overlay"
+  global:
+    - PORTAGE_VER="2.3.51" OVERLAY_NAME="chinstrap-overlay"
 before_install:
     - sudo apt-get -qq update
     - pip install lxml pyyaml
