Move to Travis CI make .travis/setup_repoman.sh executable execute .travis/setup_repoman.sh with sudo privileges limit clone depth of portage mirror to 1 move sudo to travis yaml Global env vars Make dirs with sudo and parents Just move everything in current folder Add build debug info Set full overlay path in overlay conf file

--- a/.travis/chinstrap-overlay.conf
+++ b/.travis/chinstrap-overlay.conf
@@ -1,4 +1,4 @@
 [chinstrap-overlay]
-location = /var/db/repos/chinstrap
+location = /var/db/repos/chinstrap-overlay
 sync-type = git
 sync-uri = https://github.com/mgomersbach/chinstrap-overlay.git
