--- a/.travis/chinstrap-overlay.conf
+++ b/.travis/chinstrap-overlay.conf
@@ -1,4 +1,4 @@
-[chinstrap-overlay]
+[chinstrap]
 location = /var/db/repos/chinstrap-overlay
 sync-type = git
 sync-uri = https://github.com/mgomersbach/chinstrap-overlay.git
