--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,11 @@ before_script:
 script:
   - cd /var/db/repos/chinstrap-overlay
   - /tmp/portage/portage-${PORTAGE_VER}/repoman/bin/repoman --experimental-repository-modules=y -dx full
+notifications:
+  irc: "chat.freenode.net#chinstrap"
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/e0fcbaebbd46fb3d51c1
+    on_success: change
+    on_failure: always
+    on_start: never
