--- a/profiles/chinstrap/base/env/wnoerror.conf
+++ b/profiles/chinstrap/base/env/wnoerror.conf
@@ -1,2 +1,2 @@
-CFLAGS="${CFLAGS} -Wno-error=unused-local-typedefs -Wno-error=implicit-function-declaration"
+CFLAGS="${CFLAGS} -Wno-error=unused-local-typedefs -Wno-error=implicit-function-declaration -ftree-vectorize -ftree-loop-distribute-patterns"
 CXXFLAGS="${CFLAGS}"
