--- a/.travis/gentoo.conf
+++ b/.travis/gentoo.conf
@@ -2,7 +2,7 @@
 main-repo = gentoo
 
 [gentoo]
-location = /var/db/repos/gentoo
+location = /tmp/portage/portage
 sync-type = rsync
 sync-uri = rsync://gentoo.hexnet.nl/gentoo-portage
 auto-sync = yes
