Playing with jobs
Signed-off-by: Mark Gomersbach <markgomersbach@gmail.com>

--- a/.travis/gentoo.conf
+++ b/.travis/gentoo.conf
@@ -2,7 +2,7 @@
 main-repo = gentoo
 
 [gentoo]
-location = /tmp/portage/portage
+location = /var/db/repos/gentoo
 sync-type = rsync
 sync-uri = rsync://gentoo.hexnet.nl/gentoo-portage
 auto-sync = yes
