--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,33 @@
 sudo: required
 language: python
 python:
-- pypy
+  - pypy
+cache:
+  directories:
+    - metadata/md5-cache
 env:
   global:
-  - PORTAGE_VER="2.3.88" OVERLAY_NAME="chinstrap-overlay"
+    - PORTAGE_VER="2.3.88"
+    - OVERLAY_NAME="chinstrap-overlay"
+  jobs:
+    - REPOMAN_FLAGS="--include-profiles=default/linux/amd64/17.1/selinux"
+    - REPOMAN_FLAGS="--include-profiles=chinstrap:chinstrap/default/linux/amd64"
 before_install:
   - sudo apt-get -qq update
-  - pip install lxml pyyaml
+install:
+  - pip install lxml PyYAML
 before_script:
   - chmod a+rwx .travis/setup_repoman.sh
   - "./.travis/setup_repoman.sh"
+  - ln -s /var/db/repos/${OVERLAY_NAME}/profiles/chinstrap/default/linux/amd64 /etc/portage/make.profile
 script:
   - cd /var/db/repos/chinstrap-overlay
-  - "/tmp/portage/portage/repoman/bin/repoman --experimental-repository-modules=y -dx full"
+  - "/tmp/portage-portage-${PORTAGE_VER}/repoman/bin/repoman ${REPOMAN_FLAGS}" --experimental-repository-modules=y -dx full"
 notifications:
   irc: chat.freenode.net#chinstrap
   webhooks:
     urls:
-    - https://webhooks.gitter.im/e/e0fcbaebbd46fb3d51c1
+      - https://webhooks.gitter.im/e/e0fcbaebbd46fb3d51c1
     on_success: change
     on_failure: always
     on_start: never
