--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,37 @@
 sudo: required
+
 language: python
+
 python:
   - pypy
+
 cache:
   directories:
     - metadata/md5-cache
+
 env:
-  global:
-    - PORTAGE_VER="2.3.88"
-    - OVERLAY_NAME="chinstrap-overlay"
   jobs:
-    - REPOMAN_FLAGS="--include-profiles=default/linux/amd64/17.1/selinux"
-    - REPOMAN_FLAGS="--include-profiles=chinstrap:chinstrap/default/linux/amd64"
+    - REPOMAN_FLAGS=--include-profiles=default/linux/amd64/17.1/selinux
+    - REPOMAN_FLAGS=--include-profiles=chinstrap:chinstrap/default/linux/amd64
+  global:
+    - PORTAGE_VER=2.3.88
+    - OVERLAY_NAME=chinstrap-overlay
+
 before_install:
   - sudo apt-get -qq update
+
 install:
   - pip install lxml PyYAML
+
 before_script:
   - chmod a+rwx .travis/setup_repoman.sh
   - "./.travis/setup_repoman.sh"
   - ln -s /var/db/repos/${OVERLAY_NAME}/profiles/chinstrap/default/linux/amd64 /etc/portage/make.profile
+
 script:
   - cd /var/db/repos/chinstrap-overlay
-  - "/tmp/portage-portage-${PORTAGE_VER}/repoman/bin/repoman ${REPOMAN_FLAGS}" --experimental-repository-modules=y -dx full"
+  - "/tmp/portage-portage-${PORTAGE_VER}/repoman/bin/repoman ${REPOMAN_FLAGS} --experimental-repository-modules=y -dx full"
+
 notifications:
   irc: chat.freenode.net#chinstrap
   webhooks:
