sudo outside the script
Signed-off-by: Mark Gomersbach <markgomersbach@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
 
 before_script:
   - chmod a+rwx .travis/setup_repoman.sh
-  - "./.travis/setup_repoman.sh"
+  - "sudo ./.travis/setup_repoman.sh"
   - ln -s /var/db/repos/${OVERLAY_NAME}/profiles/chinstrap/default/linux/amd64 /etc/portage/make.profile
 
 script:
