fix(repoman): repoman is no more, just pkgcheck now

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,9 +17,7 @@ jobs:
       - name: Run pkgcheck
         uses: pkgcore/pkgcheck-action@v1
         with:
-          args: >-
-            -k=-UnusedProfileDirs
-            -k=-PotentialLocalUSE
+          args: -k=-UnusedProfileDirs
 
   release:
     name: Semantic Release
